--- a/app/header/header.component.scss
+++ b/app/header/header.component.scss
@@ -5,7 +5,7 @@
 	position: absolute;
 	width: 100%;
 	padding: 12px 0px;
-	background-color: rgba(0, 0, 0, 0.6);
+	background-color: transparent;
 	align-items: center;
 	z-index: 1000;
 
