--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -2,7 +2,7 @@
 	<div class="body-page body-main-page bg-default">
 		<div id="hvbg" class="home-video-bg">
 			<video poster="/public/images/poster/poster_home_signup.jpg" loop muted autoplay>
-				<source src="/public/videos/Home.mp4" type="video/mp4" />
+				<source src="public/videos/Home.mp4" type="video/mp4" />
 			</video>
 		</div>
 		<div id="hibg" class="home-image-bg"></div>
@@ -89,5 +89,7 @@
 <!-- 				</div>
  -->			</section>
 		</section>
+
+		<h3 *ngFor="let project of projects">{{project.title}}</h3>
 	</div>
 </div>
