--- a/app/Components/header/header.component.html
+++ b/app/Components/header/header.component.html
@@ -1,4 +1,4 @@
-<header id="w-header">
+<header [@animate]="'fadeIn'" id="w-header">
 	<section id="whl" class="wh-link pad-l-20">
 		<a  href="/" class="mar-r-10"><img id="hbp" src="https://res.cloudinary.com/dqpkpmrgk/image/upload/v1457892593/witty-logo-icon-w_qtyz0j.svg" alt="wittycircle-logo"></a>
 		<li class="pad-x-15 freigb"><a href="/discover">Discover</a></li>
