--- a/app/Components/home/home.component.html
+++ b/app/Components/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="main-body-page">
+<div id="main-body-page" >
 	<div class="body-page body-main-page bg-default">
 		<div id="hvbg" class="home-video-bg">
 			<video poster="/public/images/poster/poster_home_signup.jpg" loop muted autoplay>
@@ -28,7 +28,7 @@
 					<p>How can we help?</p>
 				</div>
 			</div> -->
-			<section class="main-discover-slick slick-slider">
+			<section [@animate]="'fadeIn'" class="main-discover-slick slick-slider">
 
 				<div class="main-carousel-slick">
 					<div class="main-title-market">
@@ -92,4 +92,6 @@
 
 		<h3 *ngFor="let project of projects">{{project.title}}</h3>
 	</div>
+
+	<app-home-trending></app-home-trending>
 </div>
