--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -82,7 +82,7 @@ a:focus {
   color: white;
 }
 
-h1, h2, h3, h4, h5, h6, p, li, section, textarea, input, label, button, a {
+h1, h2, h3, h4, h5, h6, p, li, section, textarea, input, label, button, a, span {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: white;
