--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -88,6 +88,7 @@ h1, h2, h3, h4, h5, h6, p, li, section, textarea, input, label, button, a, span 
 	color: white;
 	text-decoration: none;
     margin: 0;
+    font-weight: normal;
     -webkit-transition: all 200ms linear;
     -o-transition: all 200ms linear;
     -moz-transition: all 200ms linear;
